tried to fix felx wrap

--- a/src/App.css
+++ b/src/App.css
@@ -155,6 +155,7 @@ select:focus {
 
 ul {
   display: flex;
+  flex-wrap: wrap;
 }
 
 li {
@@ -164,4 +165,8 @@ li {
   padding: 10px;
   max-height: 10vh;
   flex-wrap: wrap;
+}
+
+button {
+  box-shadow: 2px;
 }
